Added div colors

--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,23 @@ img {
   width: 525px;
   height: 100%;
 }
+
+#red {
+  background-color: #FF0000;
+  text-align: right;
+}
+
+#blue{
+  background-color: #0000FF;
+  text-align: left;
+}
+
+#yellow{
+  background-color: #FFFF00;
+  text-align: right;
+}
+
+#green{
+  background-color: #008000;
+  text-align: left;
+}
