--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,10 @@ div{
 
 }
 img {
-  display: : block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 525px;
-  height: 100%;
+  width: 50%;
 }
 
 #red {
