--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -58,22 +58,22 @@ a {
     background:transparent;
 }
 
-/* change colours to suit your needs
+ /*change colours to suit your needs*/
 ins {
-    background-color:#ff9;
-    color:#000;
+    background-color:#000000;
+    color:#FFFFFF;
     text-decoration:none;
 }
-*/
 
-/* change colours to suit your needs
+
+/* change colours to suit your needs*/
 mark {
-    background-color:#ff9;
-    color:#000;
+    background-color:#000000;
+    color:#FFFFFF;
     font-style:italic;
     font-weight:bold;
 }
-*/
+
 
 
 del {
