--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 html {
   font-family: "Lucida Grande", sans-serif;
-  color: #FFFFFF;
+  /*color: #FFFFFF;
   background-color: 000000;
+  */
 }
 h1{
   font-size: : 64px;
