--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -58,23 +58,23 @@ a {
     background:transparent;
 }
 
- /*change colours to suit your needs
+ /*change colours to suit your needs */
 ins {
     background-color:#ff9;
     color:#000;
     text-decoration:none;
 }
-*/
 
 
-/* change colours to suit your needs
+
+/* change colours to suit your needs */
 mark {
     background-color:#ff9;
     color:#000;
     font-style:italic;
     font-weight:bold;
 }
-*/
+
 
 
 
