--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 html {
   font-family: "Lucida Grande", sans-serif;
   color: #FFFFFF;
-  background-color: 000000;
+  background-color: #000000;
 
 }
 h1{
