--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,9 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 525px;
+  height: 100%;
+
 }
 
 #red {
