--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,9 @@ img {
   background-color: #008000;
   text-align: left;
 }
+
+footer{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: right;
+}
